--- a/remote_control/remote_control.ioc
+++ b/remote_control/remote_control.ioc
@@ -4,33 +4,37 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+IWDG.IPParameters=Prescaler
+IWDG.Prescaler=IWDG_PRESCALER_32
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=RTC
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=USART1
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP0=IWDG
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=RTC
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=USART1
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=VP_RTC_No_RTC_Output
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=VP_RTC_VS_RTC_Calendar
+Mcu.Pin11=VP_RTC_No_RTC_Output
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA9
 Mcu.Pin5=PA10
 Mcu.Pin6=PA13
 Mcu.Pin7=PA14
-Mcu.Pin8=VP_RTC_VS_RTC_Activate
-Mcu.Pin9=VP_RTC_VS_RTC_Calendar
-Mcu.PinsNb=13
+Mcu.Pin8=VP_IWDG_VS_IWDG
+Mcu.Pin9=VP_RTC_VS_RTC_Activate
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -134,6 +138,8 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_RTC_No_RTC_Output.Mode=RTC_OUT_NO
 VP_RTC_No_RTC_Output.Signal=RTC_No_RTC_Output
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
